# text-editor

./: Cargo.toml  README.md  meson.build
data/: com.github.tiago_vargas.text_editor.desktop  com.github.tiago_vargas.text_editor.gschema.xml  meson.build
lsp-client/: Cargo.toml
src/: app.rs
src/app/: actions.rs  content.rs  editor.rs  settings.rs
src/app/modals/: preferences.rs
